[package]
name = "dtmf"
version = "0.1.0"
authors = ["Christopher Gundler <c.gundler@mail.de>", "Carmen Meixner", "Janis Pütz"]
repository = "https://github.com/Christopher22/rust-dtmf.git"
license = "MIT"
readme = "README.md"
description = "An encoder and decoder for DTMF"

[[bin]]
name = "main"
doc = false

[dependencies]
clap = "2.20"
sample = "0.6"
hound = "3.0"